feat: enhance authentication and profile management; add detailed exception handling and logging